--- a/PROJECT/AssetMangement/src/main/webapp/resources/css/common.css
+++ b/PROJECT/AssetMangement/src/main/webapp/resources/css/common.css
@@ -67,3 +67,21 @@
 	width: 30px; 
 	height: 30px
 }
+.btn
+{
+	border-radius: 0px;
+	border: 1px solid #B4B8B4;
+}
+input[type="text"],input[type="password"],input[type="email"],input[type="date"]
+{
+	background-color: white !important;
+	border: 1px solid #0E0E0E;
+	border-radius: 0px;
+}
+p.message_error
+{
+	width: 100%;
+	color: red;
+	text-align: center;
+	font-weight: 700;
+}
